Application/SparkServerLite/wwwroot/css/site.css
/* Additional Resets and Tweaks */
* { box-sizing: border-box; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; }
html { overflow-y: scroll; }
img { max-width: 100%; }
a, a:visited { text-decoration: none; color: #00F; transition: all 0.1s ease-in-out; }
a:hover { color: #00F; text-decoration: underline; }
em { font-style: italic; }
.center { text-align: center; }
pre { padding: 1.5em 2em !important; }
pre > code { overflow-x: scroll; }
p > code { border: 1px solid #AAA; border-radius: 4px; padding: 0.25em 0.5em; font-family: monospace; font-size: 0.9em; }

/* BASE */
body { min-width: 300px; text-align: center; font-family: 'OpenSans', arial, sans-serif; background-color: #F1F1F1; font-size: 16px; }
strong { font-weight: bold; } 
blockquote { font-style: italic; color: #555; background-color: #e3e3e3; margin: 2em 0; padding: 2em 2em 2em 2em; max-width: 650px; line-height: 1.5em; }
blockquote p:last-of-type { margin-bottom: 0; }

header { width: 100%; margin: 0 auto; padding: 1em 0; }

nav { display: block; margin: 1em auto; width: 100%; }
nav ul { display: flex; justify-content: center; align-items: center; margin: 0; }
nav ul li a { display: block; padding: 1em 2em; margin: 0 1em; font-family: 'RubikMedium';  }
nav ul li a:hover { text-decoration: none; }

h1, h2, h3, h4, h5, h6 { margin-bottom: 0.5em; line-height: 1em; font-family: "RubikBold", sans-serif; }
h1 { font-size: 3em; }
h2 { font-size: 2em; }
h3 { font-size: 1.75em; }
h4 { font-size: 1.65em; }
h5 { font-size: 1.5em; }
h6 { font-size: 1.45em; }

.content { width: 100%; margin: 0 auto; padding: 1em 0 1em 0; background-color: #FFF; }

.logo-wrapper img { width: 300px; margin: 0 auto; }
.logo-byline { margin-top: 0.5em; font-size: 1.25em; }

.loader { display: none; }
.loader-message { margin: 1em; padding: 1em; }

.section .title { padding: 1em 0; margin: 0; font-family: "RubikMedium", sans-serif; }

.hero { padding: 4em 1em; background-size: cover; background-position: center; box-shadow: inset 0 0 192px #000; color: #FFF; }
.hero h2 { font-size: 2em; font-weight: bold; margin: 0.5em 0 0.5em 0; }
.hero h3 { font-size: 1.25em; font-family: "OpenSans", sans-serif; font-weight: bold; }

.hero-link { text-decoration: none; }
.hero-link:hover { text-decoration: none; }

.blog-list { padding: 0 1em; }

.blog-card { padding: 0; margin: 0 0 2em 0; text-align: left; }
.blog-card:last-of-type { margin-bottom: 0; }
.blog-card h3 { font-size: 1.75em; margin-bottom: 0.5em; line-height: 1.25em; }
.blog-card .image-preview { background-position: center; background-size: cover; margin-bottom: 1em; }
.blog-card .image-preview > a { display: block; height: 200px; width: 100%; }
.blog-card .subtitle { font-size: 1.15em; margin-bottom: 0.5em; }
.blog-card .date { font-size: 0.85em; }

.blog-banner { background-size: cover; background-position: center; height: 250px; position: relative; margin-bottom: 1em; border-radius: 4px; }
.blog-banner h1 { font-size: 2em; margin: 0; line-height: 1.25em; position: absolute; bottom: 0px; backdrop-filter: blur(18px); color: #FFF; padding: 0.5em 0.5em; text-shadow: 2px 2px 2px #000; background-color: rgba(0, 0, 0, 0.25); border-bottom-left-radius: 4px; border-top-right-radius: 4px;}

.blog-about { margin: 1em auto; max-width: 500px; padding: 1em; text-align: left; columns: 2; }
.blog-about .item { margin-bottom: 1em; }
.blog-about .item:last-of-type { margin-bottom: 0; }
.blog-about .label { font-weight: bold; margin-bottom: 0.15em; font-size: 0.85em }
.blog-about p { line-height: 1em }
.blog-about ul.tags { columns: 1; margin: 0; }
.blog-about ul.tags li { margin: 0; line-height: 1em; list-style-type: none; }
.blog-about ul.tags li a { display: block; padding: 0.25em 0; }

article.blog { text-align: left; padding: 0 1em; }
article.blog h1 { font-size: 2.25em; margin: 0 0 1em 0; text-align: center; line-height: 1em; padding-top: 1em; }
article.blog p { font-size: 1.15em; line-height: 1.5em; margin-bottom: 2em; text-align: justify; }
article.blog .figure { margin: 0 0 2em 0; }
article.blog ul, article.blog ol { margin: 0 0 2em 2em; font-size: 1.15em; }
article.blog ul li { list-style-type: disc; line-height: 1.5em; margin-bottom: 0.5em; }
article.blog ol li { list-style-type: decimal; line-height: 1.5em; margin-bottom: 0.5em; }

.sub-menu { padding: 1em 0; }

table { width: 100%; text-align: left; }
table th, td { padding: 1em; }
table th { background-color: #6e8198; color: #FFF; font-weight: bold; text-shadow: 1px 1px 0 #000; }
table tr:nth-child(even) { background-color: #f6f6f6; }
table tr:nth-child(odd) { background-color: #eaeaea; }

.status-message { margin: 1em auto 3em auto; padding: 1em; font-size: 1em; box-shadow: 0 0 24px #636363; border-radius: 12px; color: #FFF; font-weight: bold; }
.status-message.success { background-color: #1f650e; }
.status-message.error { background-color: #a50000; }

.field-validation-error { display: block; margin: 1em 0 1em 0; padding: 0.5em 1em; background-color: #a50000; color: #FFF; border-radius: 8px; font-weight: bold;}

.modal { display: none; z-index: 10000; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 90%; background-color: #FFF; padding: 32px; border-radius: 16px; box-shadow: 0 8px 32px #000;  }
.modal.full { width: 95%; }
.modal button { margin-top: 32px; }

form { width: 95%; margin: 0 auto; text-align: left; }
form .row { margin: 0 0 2em 0; }
form .row label { display: block; font-weight: bold; margin-bottom: 0.25em }
form .row > .controls { margin: 0.5em 0 0.5em 0; }
form input[type="text"], textarea, select { width: 100%; padding: 0.75em; box-shadow: inset 1px 1px 2px #AAA; border: 1px solid #AAA; border-radius: 4px; font-size: 1em; background-color: #f9f9f9; }
form input[type="submit"] { padding: 0.75em 2em; }
form input[type="file"] { margin: 1em 0; }
form .checkbox-list { max-height: 200px; overflow-y: auto; background-color: #eaeaea; border-radius: 8px; padding: 1em; columns: 1; margin-bottom: 0.5em; }

a.btn, .btn, button { display: inline-block; border-radius: 8px; cursor: pointer; padding: 0.75em 2em;  text-shadow: 1px 1px 0 #000; background-color: #4c7caa; color: #FFF; box-shadow: 0 3px 0 #313131; transition: none; border: none; }
a.btn:hover, .btn:hover, button:hover { background-color: #63a5e4; text-decoration: none;}
a.btn:active, .btn:active, button:active { box-shadow: 0 1px 0 #313131; position: relative; top: 3px; }
.btn.primary { padding: 1em 4em; font-weight: bold; font-size: 1.05em; }

.row.blog-media { padding: 1em; background-color: #DFDFDF; border-radius: 8px; }
.row.blog-media .upload { margin: 1em 0 0 0; }
.row.blog-media .upload .loader { margin: 1em 0;}
.row.blog-media h2 { font-weight: bold; }
.media-list ul li { display: grid; grid-template-columns: 1fr 2fr; padding-bottom: 1em; }
.media-list ul li:last-of-type { padding-bottom: 0; }
.media-list ul li .image-container { grid-column-start: 1; padding-right: 1em; }
.media-list ul li .image-container img { border-radius: 6px; }
.media-list ul li .text-container { grid-column-start: 2; }
.media-url { margin: 1em 0; padding: 0.5em; max-width: 100%; background-color: #EFEFEF; font-family: monospace; box-shadow: inset 1px 1px 2px #AAA; overflow-x: auto; border-radius: 4px; }

.explore-tags { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; }
.explore-tags li a { padding: 1em; display: block; }

.bottom-nav { text-align: center; padding: 2em; }
.bottom-nav a { font-family: "RubikMedium", sans-serif; font-size: 1.15em; }

footer { padding: 2em 1em; margin: 0 auto; text-align: left; line-height: 1.5em; }
footer p { padding-bottom: 0.25em; text-shadow: 1px 1px 0 #FFF; }

@media (min-width: 600px)
{
	.blog-card .image-preview > a { height: 200px; }
}

@media (min-width: 825px)
{
	header { margin: 1em auto; max-width: 80%; }

	nav {  }
	nav ul li a { font-size: 1.15em; } 

	.section .title { font-size: 2.5em; padding: 1.25em 0; }
	
	.modal { max-width: 640px; }
	.modal.full { max-width: initial; }

	.hero { box-shadow: inset 0 0 500px #000; text-shadow: 2px 2px 0 #000; padding: 8em 3em; }
	.hero .header { font-size: 1.25em; }
	.hero h2 { font-size: 3em; line-height: 1.25em }
	.hero h3 { font-size: 1.5em; }

	.content { max-width: 80%; padding: 1em 1em 3em 1em; margin-top: 1em; box-shadow: 0 1em 48px #a7a7a7; }

	.blog-list { padding: 0; }

	.blog-card { display: grid; grid-template-columns: 2fr 3fr; }
	.blog-card .image-preview { margin: 0 1em 0 0; }
	.blog-card .overview { grid-column: 2; text-align: left; }
	
	.blog-about { min-width: 375px; margin: 0 auto 4em auto; padding: 2em; border: 1px solid #AAA; border-radius: 6px; }

	.blog-banner { margin-bottom: 3em; height: 475px; }
	.blog-banner h1 { font-size: 3em; }

	article.blog { padding: 0 2em; font-size: 1.1em; line-height: 1.15em; }
	article.blog h1 { font-size: 3em; text-align: left; padding: 0; }
	article.blog p { font-size: 1em; line-height: 1.75em; max-width: 650px; }
	article.blog ul, article.blog ol { font-size: 1em; }

	.status-message { max-width: 600px; padding: 2em; line-height: 1.5em; }

	.sub-menu { padding: 2em 0; }

	form { width: 60% } 
	form .row { margin: 2em; }
	form .row label { margin-bottom: 0.5em; }
	form input.half { width: 50%; }
	form .checkbox-list { columns: 3 }

	.media-list ul li { }
	.media-list ul li .image-container { }

	.explore-tags li a { padding: 1em 2em; font-size: 1.25em; }

	footer { max-width: 80%; }
}

@media (min-width: 1100px)
{	
	nav ul { justify-content: right; align-items: initial; }
	nav ul li a { margin: 0 0 0 1em; }

	header { display: grid; grid-template-columns: 1fr 1fr; align-items: center; }

	.admin header { grid-template-columns: 1fr; }

	.blog-card h3 { font-size: 2em; margin-bottom: 0.5em; }
	.blog-card .subtitle { font-size: 1.25em; margin-bottom: 0.5em; }
	.blog-card .date { font-size: 1em; }

	article.blog { padding: 0 8em; }

	footer { display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 24px; padding: 1em 0; margin-top: 1em; }
}

@media (min-width: 1350px)
{
	.blog-about { float: right; margin: 0 0 3em 4em; columns: 2; }
}

@media (min-width: 1600px)
{
	header, .content, footer { max-width: 1200px; }
}

/* DARK MODE */

@media (prefers-color-scheme: dark)
{

}

